@@ -19,7 +19,7 @@ import net.minecraft.util.math.BlockPos;
 public final class TileFusionEnergyConverter extends TileBase implements IEnergyGenerator, ITickableTileEntity {
 
   private final Generator energy = new Generator(MachineValues.fusion_energy_output_per_tick.get());
-  private static final int sync_timer = 4; // TODO: remove sync timer in version 1.4
+  private static final int sync_timer = 4; // TODO: remove sync timer in version 1.7
   private final ArrayList<DataCableNetwork> data_cable_networks = new ArrayList<>(1);
   private TileFusionChamber fusion_chamber;
   private boolean activated;
